# MailDirectoryEngine

./: .dockerignore  .env.example  .gitignore  Dockerfile  MailDirectoryEngine.csproj  MailDirectoryEngine.slnx  README.md  docker-compose.yml
ContactService/: CanonicalContactDtos.cs  CanonicalContactMapper.cs  CanonicalContactValidator.cs  ContactDtos.cs  ContactsService.csproj  Dockerfile  EnvEwsConfigProvider.cs  EwsConfig.cs  EwsContactClientAdapter.cs  EwsContactService.cs  ExchangeContactEngine.cs  IEwsContactClient.cs  Program.cs  README.md
MailDirectoryEngine.Tests/: ConfigProviderTests.cs  ImapEngineTests.cs  ImapServiceTests.cs
MailParsing/: .dockerignore  Dockerfile  MailDirectoryEngine.csproj  MailDirectoryEngine.slnx
MailStorageService/: .dockerignore  Dockerfile  MailStorageService.csproj  README.md
Properties/: AssemblyInfo.cs
llmService/: .gitignore  Dockerfile  README.md  contact_sync.py  main.py  pyproject.toml
llmService/API/: ContactService.py  LlmBackendClient.py  StorageService.py  __init__.py
llmService/DB/: DBadapter.py
llmService/HTMLClean/: htmlCleaner.py
llmService/LLM/: Connection.py  __init__.py  classifier.py  config.py  contact_dedupe.py  contact_extraction.py  json_parser.py  mail_preprocessing.py  normalization.py  patterns.py  promptInbox.py  promptSent.py  prompt_builder.py  promtInbox.py  sent_analyze.py
llmService/tests/: test_DB_adapter.py  test_connection_parser.py  test_contact_sync.py  test_html_cleaner.py  test_main.py  test_message_model.py  test_sent_analyze.py  test_storage_service.py  test_test_connection.py
(+121 files in other folders)
