[project]
name = "llm-service"
version = "0.1.0"
description = "Inbox post-processing worker (HTML cleaning + local LLM classification)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "ollama>=0.6.1",
    "psycopg[binary]>=3.3.3",
    "pytest>=9.0.2",
    "sqlalchemy>=2.0.48",
]
[tool.pytest.ini_options]
pythonpath=[".."]
